package org.example.ingenierosvscarreraspt1;
public interface Destruible {
    void destruye();
}
