package org.example.ingenierosvscarreraspt1;
public interface ElementoDinamico {
    void mover(String direccion, int distancia);
}
