package org.example.ingenierosvscarreraspt1;
public interface Inventariable {
    void registrar();
    void borrar();
}

